# neosense

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  DEMO_GUIDE.md  FRAMEWORK_INTEGRATION.md  FRAMEWORK_NOTES.md  README.md  config.yaml  implementation.md  main.py  pyproject.toml  temporal.db
app/: __init__.py  activities.py  client.py  handler.py  workflow.py
app/queries/: get_data_statistics.cypher  get_detailed_schema.cypher  get_node_labels.cypher  get_property_keys.cypher  get_quality_metrics.cypher  get_relationship_schema.cypher  get_relationship_types.cypher  get_schema_info.cypher
components/: bindings.yaml  objectstore.yaml  statestore.yaml
deploy/: Dockerfile  README.md  entrypoint.sh  supervisord.conf
frontend/static/: script.js  styles.css
frontend/templates/: index.html
local/: .gitkeep
local/dapr/eventstore/: 001474a6-e7c3-4714-af68-c718d8a28a71  0070032e-5241-4293-bcc6-9ae3e8a5653e  00e5e3e0-0a59-43dc-a7cd-144f3db4931e  011edaf7-5a1e-443e-9399-b9e5c1397cd2  018e19cf-e658-41e6-98eb-425ae4d2b7d7  01b7d2cd-7901-4f9d-b942-344e0b391a26  022515f4-5003-43cf-9236-ef93a0222dbe  0279335d-3af5-403a-b565-583be601c7e8  032e0cd4-05dd-4220-8b65-7ec6d033d970  0397898a-0723-43a9-8d70-62bc626254b4  0447a33d-9700-46d1-871c-a949a34ea639  04c5f9ca-e54f-4369-83a7-efd928909c19  04f696a9-bcf4-4f39-a515-e48d000f2ba7  050c3491-dadf-4ed0-b331-aec2c8b6848b  0516bdbc-9347-45e7-a0d0-68ee9debc67c  055bb2e3-5436-45db-8524-bedb458803ce  061741b0-d9d3-4bf7-be15-fcc49be09adb  064bd8b2-1e98-489b-8218-9184564e74d4  06675c21-5de5-42eb-951f-3e8ec065d699  074a7d18-2ffc-460e-90ea-1062c53ba9f1  0781d44f-971d-4b5d-9c12-6875a9a31a40  07ba627f-836f-48a9-bde1-9406d15586e5  080e2ddd-f69d-4ee3-8ac5-b2fa4be31d56  08b0f742-124e-445c-93e6-a596c1931243  096a090a-85c1-4997-bbe6-b1d293c3da1c  09963a45-473e-4c0b-9fec-5238606f7b66  09e97e8f-f8c9-4ff1-88de-4d2c6fae1c77  0a04b390-2ee0-457b-8b17-d6a9b7936ab4  0a28d881-7356-4bfc-b4a9-edfeb6544d0e  0c34ad5d-1ab3-448e-85e6-a8f4ae98d8fa  0ca7bd80-0daf-4bee-a0c4-c1b1dfe9d4fc  0cb26c20-cb8d-4864-868e-bacc2a2be81d  0cedb6b2-b2ce-4646-a2cc-10e05a5f6de8  0d14acfa-113e-465d-8021-c4d07dfe09b7  0e1dd552-6657-42c5-9f30-bca5a0b1e573  0e366db6-be69-4bf4-9221-e0b43ba4b057  0e47955e-5477-46ef-9576-ca208533d6b6  0f2629e1-e482-4d67-b9f1-417769075ae4  0f35152a-1edc-4be9-8bae-cff86aa0b0ea  0f608b59-7c39-42f8-a098-a0a4344ab443  (+568 more)
local/dapr/objectstore/persistent-artifacts/apps/default/workflows/31034866-fc6a-4592-a296-0c02570a2b42/: config.json
local/dapr/objectstore/persistent-artifacts/apps/default/workflows/418b56b7-9aaa-4818-962b-757abf1b3447/: config.json
local/dapr/objectstore/persistent-artifacts/apps/default/workflows/48f5b7bb-8ede-4c7c-aafa-26a2bec2e6cd/: config.json
workflow_results/: 9203035e-9917-453a-ba93-4e41a7b84165.json  d9ae6b51-fa11-4f5d-9de3-15204881bd74.json
(+28 files in other folders)
